force-app/main/default/objects/Species__c/Species__c.object-meta.xml
<CustomObject>
    <label>Especie</label>
    <nameField>
        <label>Species Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Especies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>