force-app/main/default/objects/Species__c/fields/Agua__c.field-meta.xml
<CustomField>
    <fullName>Agua__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agua</label>
    <type>Checkbox</type>
</CustomField>