force-app/main/default/objects/Species__c/fields/chorrada__c.field-meta.xml
<CustomField>
    <fullName>chorrada__c</fullName>
    <label>chorrada</label>
    <type>Url</type>
</CustomField>