force-app/main/default/objects/Species__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <formula>IMAGE(imageURL__c,&quot;image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>image</label>
    <type>Text</type>
</CustomField>