force-app/main/default/objects/Species__c/fields/imagen__c.field-meta.xml
<CustomField>
    <fullName>imagen__c</fullName>
    <formula>IMAGE(chorrada__c,&quot;name&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>imagen</label>
    <type>Text</type>
</CustomField>