force-app/main/default/objects/Species__c/fields/imageURL__c.field-meta.xml
<CustomField>
    <fullName>imageURL__c</fullName>
    <label>imageURL</label>
    <type>Url</type>
</CustomField>