force-app/main/default/objects/Species__c/fields/MaxTemp__c.field-meta.xml
<CustomField>
    <fullName>MaxTemp__c</fullName>
    <label>MaxTemp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>